--- a/Module03/03-03-Matrices.ipynb
+++ b/Module03/03-03-Matrices.ipynb
@@ -29,9 +29,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><td>4</td><td>5</td><td>6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 2 & 3\\\\\n",
+       "\t 4 & 5 & 6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | 3 | \n",
+       "| 4 | 5 | 6 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    2    3   \n",
+       "[2,] 4    5    6   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = matrix(c(1,4,2,5,3,6), nrow = 2, ncol =3)\n",
     "A"
@@ -46,9 +79,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>5</td><td>7</td><td>1</td></tr>\n",
+       "\t<tr><td>4</td><td>3</td><td>8</td><td>2</td></tr>\n",
+       "\t<tr><td>2</td><td>6</td><td>9</td><td>5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{llll}\n",
+       "\t 1 & 5 & 7 & 1\\\\\n",
+       "\t 4 & 3 & 8 & 2\\\\\n",
+       "\t 2 & 6 & 9 & 5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 5 | 7 | 1 | \n",
+       "| 4 | 3 | 8 | 2 | \n",
+       "| 2 | 6 | 9 | 5 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3] [,4]\n",
+       "[1,] 1    5    7    1   \n",
+       "[2,] 4    3    8    2   \n",
+       "[3,] 2    6    9    5   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "B = array(c(1,4,2,5,3,6,7,8,9,1,2,5), c(3,4))\n",
     "B"
@@ -73,9 +143,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>7</td><td>7</td><td>7</td></tr>\n",
+       "\t<tr><td>7</td><td>7</td><td>7</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 7 & 7 & 7\\\\\n",
+       "\t 7 & 7 & 7\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 7 | 7 | 7 | \n",
+       "| 7 | 7 | 7 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 7    7    7   \n",
+       "[2,] 7    7    7   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "## Create the second matrix\n",
     "B = matrix(c(6,3,5,2,4,1), nrow = 2, ncol = 3)\n",
@@ -96,9 +199,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>-5</td><td>-3</td><td>-1</td></tr>\n",
+       "\t<tr><td> 1</td><td> 3</td><td> 5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t -5 & -3 & -1\\\\\n",
+       "\t  1 &  3 &  5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| -5 | -3 | -1 | \n",
+       "|  1 |  3 |  5 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] -5   -3   -1  \n",
+       "[2,]  1    3    5  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A - B"
    ]
@@ -127,9 +263,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>-5</td><td>-1</td><td>3 </td></tr>\n",
+       "\t<tr><td>-3</td><td> 1</td><td>5 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t -5 & -1 & 3 \\\\\n",
+       "\t -3 &  1 & 5 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| -5 | -1 | 3  | \n",
+       "| -3 |  1 | 5  | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] -5   -1   3   \n",
+       "[2,] -3    1   5   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>5 </td><td> 1</td><td>-3</td></tr>\n",
+       "\t<tr><td>3 </td><td>-1</td><td>-5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 5  &  1 & -3\\\\\n",
+       "\t 3  & -1 & -5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 5  |  1 | -3 | \n",
+       "| 3  | -1 | -5 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 5     1   -3  \n",
+       "[2,] 3    -1   -5  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "C = matrix(c(-5,-3,-1,1,3,5), ncol = 3, nrow = 2)\n",
     "\n",
@@ -146,14 +347,85 @@
     "\n",
     "\\begin{equation}\\begin{bmatrix}1 & 2 & 3 \\\\4 & 5 & 6\\end{bmatrix}^{T} = \\begin{bmatrix}1 & 4\\\\2 & 5\\\\3 & 6 \\end{bmatrix}\\end{equation}\n",
     "\n",
+    "The first row becomes the first column, the second row becomes the second column etc.\n",
+    "\n",
     "The `t` function in R creates the transpose of a matrix:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><td>4</td><td>5</td><td>6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 2 & 3\\\\\n",
+       "\t 4 & 5 & 6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | 3 | \n",
+       "| 4 | 5 | 6 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    2    3   \n",
+       "[2,] 4    5    6   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>4</td></tr>\n",
+       "\t<tr><td>2</td><td>5</td></tr>\n",
+       "\t<tr><td>3</td><td>6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 1 & 4\\\\\n",
+       "\t 2 & 5\\\\\n",
+       "\t 3 & 6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 4 | \n",
+       "| 2 | 5 | \n",
+       "| 3 | 6 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 1    4   \n",
+       "[2,] 2    5   \n",
+       "[3,] 3    6   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A\n",
     "t(A)"
@@ -172,7 +444,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
