--- a/Module03/03-04-More Matrices.ipynb
+++ b/Module03/03-04-More Matrices.ipynb
@@ -19,9 +19,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><td>4</td><td>5</td><td>6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 2 & 3\\\\\n",
+       "\t 4 & 5 & 6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | 3 | \n",
+       "| 4 | 5 | 6 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    2    3   \n",
+       "[2,] 4    5    6   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>2 </td><td> 4</td><td> 6</td></tr>\n",
+       "\t<tr><td>8 </td><td>10</td><td>12</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 2  &  4 &  6\\\\\n",
+       "\t 8  & 10 & 12\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 2  |  4 |  6 | \n",
+       "| 8  | 10 | 12 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 2     4    6  \n",
+       "[2,] 8    10   12  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = matrix(c(1,4,2,5,3,6), nrow = 2, ncol =3)\n",
     "A\n",
@@ -78,9 +143,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><td>4</td><td>5</td><td>6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 2 & 3\\\\\n",
+       "\t 4 & 5 & 6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | 3 | \n",
+       "| 4 | 5 | 6 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    2    3   \n",
+       "[2,] 4    5    6   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>9</td><td>8</td></tr>\n",
+       "\t<tr><td>7</td><td>6</td></tr>\n",
+       "\t<tr><td>5</td><td>4</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 9 & 8\\\\\n",
+       "\t 7 & 6\\\\\n",
+       "\t 5 & 4\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 9 | 8 | \n",
+       "| 7 | 6 | \n",
+       "| 5 | 4 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 9    8   \n",
+       "[2,] 7    6   \n",
+       "[3,] 5    4   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td> 38</td><td>32 </td></tr>\n",
+       "\t<tr><td>101</td><td>86 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t  38 & 32 \\\\\n",
+       "\t 101 & 86 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "|  38 | 32  | \n",
+       "| 101 | 86  | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,]  38  32  \n",
+       "[2,] 101  86  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "B = matrix(c(9,7,5,8,6,4), nrow = 3, ncol = 2)\n",
     "A\n",
@@ -105,9 +271,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>2</td><td>4</td></tr>\n",
+       "\t<tr><td>6</td><td>8</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 2 & 4\\\\\n",
+       "\t 6 & 8\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 2 | 4 | \n",
+       "| 6 | 8 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 2    4   \n",
+       "[2,] 6    8   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>3</td></tr>\n",
+       "\t<tr><td>5</td><td>7</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 1 & 3\\\\\n",
+       "\t 5 & 7\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 3 | \n",
+       "| 5 | 7 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 1    3   \n",
+       "[2,] 5    7   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>22</td><td>34</td></tr>\n",
+       "\t<tr><td>46</td><td>74</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 22 & 34\\\\\n",
+       "\t 46 & 74\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 22 | 34 | \n",
+       "| 46 | 74 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 22   34  \n",
+       "[2,] 46   74  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>20</td><td>28</td></tr>\n",
+       "\t<tr><td>52</td><td>76</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 20 & 28\\\\\n",
+       "\t 52 & 76\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 20 | 28 | \n",
+       "| 52 | 76 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 20   28  \n",
+       "[2,] 52   76  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = matrix(c(2,6,4,8), ncol = 2, nrow = 2)\n",
     "B = matrix(c(1,5,3,7), ncol = 2, nrow = 2)\n",
@@ -136,9 +431,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><td>0</td><td>1</td><td>0</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 0 & 0\\\\\n",
+       "\t 0 & 1 & 0\\\\\n",
+       "\t 0 & 0 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 0 | 0 | \n",
+       "| 0 | 1 | 0 | \n",
+       "| 0 | 0 | 1 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    0    0   \n",
+       "[2,] 0    1    0   \n",
+       "[3,] 0    0    1   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><td>4</td><td>5</td><td>6</td></tr>\n",
+       "\t<tr><td>7</td><td>8</td><td>9</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 2 & 3\\\\\n",
+       "\t 4 & 5 & 6\\\\\n",
+       "\t 7 & 8 & 9\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | 3 | \n",
+       "| 4 | 5 | 6 | \n",
+       "| 7 | 8 | 9 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    2    3   \n",
+       "[2,] 4    5    6   \n",
+       "[3,] 7    8    9   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><td>4</td><td>5</td><td>6</td></tr>\n",
+       "\t<tr><td>7</td><td>8</td><td>9</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 2 & 3\\\\\n",
+       "\t 4 & 5 & 6\\\\\n",
+       "\t 7 & 8 & 9\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | 3 | \n",
+       "| 4 | 5 | 6 | \n",
+       "| 7 | 8 | 9 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    2    3   \n",
+       "[2,] 4    5    6   \n",
+       "[3,] 7    8    9   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><td>4</td><td>5</td><td>6</td></tr>\n",
+       "\t<tr><td>7</td><td>8</td><td>9</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 2 & 3\\\\\n",
+       "\t 4 & 5 & 6\\\\\n",
+       "\t 7 & 8 & 9\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | 3 | \n",
+       "| 4 | 5 | 6 | \n",
+       "| 7 | 8 | 9 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    2    3   \n",
+       "[2,] 4    5    6   \n",
+       "[3,] 7    8    9   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "I = diag(3)\n",
     "I\n",
@@ -179,7 +619,7 @@
     "What happened there?\n",
     "- We swapped the positions of *a* and *d*\n",
     "- We changed the signs of *b* and *c*\n",
-    "- We multiplied the resulting matrix by 1 over the *determinant* of the matrix (*ad-bc*)\n",
+    "- We multiplied the resulting matrix by 1 over the *determinant* of the matrix (*ad-bc*) (product of diag elements subtracted)\n",
     "\n",
     "Let's try with some actual numbers:\n",
     "\n",
@@ -204,9 +644,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>6</td><td>2</td></tr>\n",
+       "\t<tr><td>1</td><td>2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 6 & 2\\\\\n",
+       "\t 1 & 2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 6 | 2 | \n",
+       "| 1 | 2 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 6    2   \n",
+       "[2,] 1    2   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td> 0.2</td><td>-0.2</td></tr>\n",
+       "\t<tr><td>-0.1</td><td> 0.6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t  0.2 & -0.2\\\\\n",
+       "\t -0.1 &  0.6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "|  0.2 | -0.2 | \n",
+       "| -0.1 |  0.6 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,]  0.2 -0.2\n",
+       "[2,] -0.1  0.6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "B = matrix(c(6,1,2,2), nrow = 2, ncol = 2)\n",
     "B\n",
@@ -272,9 +777,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>4</td><td>2</td><td>2</td></tr>\n",
+       "\t<tr><td>6</td><td>2</td><td>4</td></tr>\n",
+       "\t<tr><td>2</td><td>2</td><td>8</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 4 & 2 & 2\\\\\n",
+       "\t 6 & 2 & 4\\\\\n",
+       "\t 2 & 2 & 8\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 4 | 2 | 2 | \n",
+       "| 6 | 2 | 4 | \n",
+       "| 2 | 2 | 8 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 4    2    2   \n",
+       "[2,] 6    2    4   \n",
+       "[3,] 2    2    8   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><td>0</td><td>1</td><td>0</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1 & 0 & 0\\\\\n",
+       "\t 0 & 1 & 0\\\\\n",
+       "\t 0 & 0 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 0 | 0 | \n",
+       "| 0 | 1 | 0 | \n",
+       "| 0 | 0 | 1 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3]\n",
+       "[1,] 1    0    0   \n",
+       "[2,] 0    1    0   \n",
+       "[3,] 0    0    1   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "B = matrix(c(4,6,2,2,2,2,2,4,8), nrow = 3, ncol = 3)\n",
     "B\n",
@@ -302,9 +880,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>2</td></tr>\n",
+       "\t<tr><td>3</td><td>4</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 1 & 2\\\\\n",
+       "\t 3 & 4\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 2 | \n",
+       "| 3 | 4 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 1    2   \n",
+       "[2,] 3    4   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>6</td><td>2</td></tr>\n",
+       "\t<tr><td>1</td><td>2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 6 & 2\\\\\n",
+       "\t 1 & 2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 6 | 2 | \n",
+       "| 1 | 2 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 6    2   \n",
+       "[2,] 1    2   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>0.0</td><td>1.0</td></tr>\n",
+       "\t<tr><td>0.2</td><td>1.8</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 0.0 & 1.0\\\\\n",
+       "\t 0.2 & 1.8\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 0.0 | 1.0 | \n",
+       "| 0.2 | 1.8 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 0.0  1.0 \n",
+       "[2,] 0.2  1.8 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = matrix(c(1,3,2,4), nrow = 2, ncol = 2)\n",
     "A\n",
@@ -370,9 +1045,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>2</td><td>4</td></tr>\n",
+       "\t<tr><td>6</td><td>2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{ll}\n",
+       "\t 2 & 4\\\\\n",
+       "\t 6 & 2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 2 | 4 | \n",
+       "| 6 | 2 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2]\n",
+       "[1,] 2    4   \n",
+       "[2,] 6    2   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>18</li>\n",
+       "\t<li>34</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 18\n",
+       "\\item 34\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 18\n",
+       "2. 34\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 18 34"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>5</li>\n",
+       "\t<li>2</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 5\n",
+       "\\item 2\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 5\n",
+       "2. 2\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 5 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = matrix(c(2,6,4,2), nrow = 2, ncol = 2)\n",
     "A\n",
@@ -394,7 +1156,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
